add 2 state variable case

--- a/notebook/jump_damage_appr_one.ipynb
+++ b/notebook/jump_damage_appr_one.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "alert-archives",
    "metadata": {
     "code_folding": []
    },
@@ -35,6 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "convinced-rover",
    "metadata": {
     "code_folding": []
    },
@@ -64,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "checked-understanding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +88,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "equivalent-williams",
    "metadata": {},
    "source": [
     "# Jump model of damages\n",
@@ -139,6 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "accessible-beaver",
    "metadata": {
     "code_folding": []
    },
@@ -192,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "timely-discussion",
    "metadata": {
     "scrolled": true
    },
@@ -221,6 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "later-shaft",
    "metadata": {
     "scrolled": true
    },
@@ -232,6 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "specified-permission",
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "compressed-colleague",
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "painful-cursor",
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "center-skating",
    "metadata": {
     "code_folding": [
      0
@@ -374,6 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
+   "id": "described-quantity",
    "metadata": {
     "scrolled": false
    },
@@ -399,7 +411,12 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "id": "knowing-extreme",
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -456,19 +473,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
+   "id": "legislative-hello",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "episode: 3286,\t ode error: 7.29063526183106e-07,\t ft error: 9.972179725499982e-09\n",
-      "episode: 3484,\t ode error: 4.797884418984569e-06,\t ft error: 9.996125050389567e-09\n",
-      "episode: 3854,\t ode error: 1.672045233426374e-05,\t ft error: 9.984593522342305e-09\n",
-      "episode: 1071,\t ode error: 1.4311360741643377e-05,\t ft error: 9.999449543847868e-09\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-69502411fa8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mξw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m600\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mξp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mdmg_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mδ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mη\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mθ_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mγ1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mγ2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mγ3_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;31m̄\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdmg_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mς\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mξp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mξa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mξw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mσy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0msolu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mϕ_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapproach_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_grid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumy_bar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -487,6 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "statutory-coordination",
    "metadata": {},
    "outputs": [
     {
@@ -522,6 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "laden-revelation",
    "metadata": {},
    "outputs": [
     {
@@ -542,6 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "infinite-missouri",
    "metadata": {},
    "outputs": [
     {
@@ -562,12 +584,13 @@
     "plt.ylim(0, 0.2)\n",
     "plt.xlabel(\"Temperature anamoly\", fontsize=13)\n",
     "plt.ylabel(\"Drift distortion\", fontsize=13)\n",
-    "plt.savefig('./paper_plots/drift_distortion.pdf')"
+    "# plt.savefig('./paper_plots/drift_distortion.pdf')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "express-desktop",
    "metadata": {},
    "outputs": [
     {
@@ -591,6 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "stable-desire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,6 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "unavailable-fighter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,6 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "caroline-creation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,6 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "architectural-lemon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,6 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "polyphonic-colors",
    "metadata": {},
    "outputs": [
     {
@@ -669,6 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "motivated-cincinnati",
    "metadata": {},
    "outputs": [
     {
@@ -689,6 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "indie-manchester",
    "metadata": {},
    "outputs": [
     {
@@ -717,6 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "automated-principle",
    "metadata": {},
    "outputs": [
     {
@@ -755,6 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "alien-garbage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,6 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "stuck-pioneer",
    "metadata": {
     "scrolled": false
    },
@@ -813,6 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "offshore-dining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,6 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "golden-motorcycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,6 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "generic-feeling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,6 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "unlimited-retail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,6 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "miniature-feedback",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,6 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "complete-stuff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,6 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "sufficient-reviewer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,6 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "talented-wrist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,6 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "rocky-matrix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,6 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "extensive-deputy",
    "metadata": {
     "scrolled": false
    },
@@ -1020,6 +1063,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "civic-childhood",
    "metadata": {},
    "source": [
     "# partition: carbon and temp"
@@ -1028,6 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cardiovascular-pillow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,6 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "handmade-petroleum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,6 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "perfect-extra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,6 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "engaged-myanmar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,6 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "nutritional-bosnia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,6 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "friendly-deployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,6 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "indie-response",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,6 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "taken-rogers",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,6 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "impressed-affairs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,6 +1193,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "searching-courtesy",
    "metadata": {},
    "source": [
     "# SCC uncertainty decomposition\n",
@@ -1161,6 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "muslim-notion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,6 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
+   "id": "packed-arthritis",
    "metadata": {},
    "outputs": [
     {
@@ -1243,6 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "correct-freight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,6 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "strategic-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,6 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "subtle-biology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,6 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
+   "id": "moral-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,6 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
+   "id": "stuck-archive",
    "metadata": {},
    "outputs": [
     {
@@ -1340,6 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "analyzed-sweden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,6 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "trying-creation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,6 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cognitive-advisory",
    "metadata": {
     "scrolled": false
    },
@@ -1378,6 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "decimal-england",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,6 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "sorted-organ",
    "metadata": {
     "scrolled": false
    },
@@ -1407,6 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "centered-consistency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,6 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "adverse-repeat",
    "metadata": {
     "scrolled": false
    },
@@ -1436,6 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "worth-november",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,6 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "herbal-river",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
