--- a/notebook/parameters.ipynb
+++ b/notebook/parameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{align*}\n",
-    "d \\log K_t & = \\left[\\alpha_k + \\beta_k Z_t + \\frac{I_t}{K_t} - \\frac{\\kappa}{2}\\left(\\frac{I_t}{K_t}\\right)^2 - \\frac{1}{2} |\\sigma_k|^2\\right] dt + \\sigma_k \\cdot d W_t\\\\\n",
-    "d Z_t & = - \\beta_z Z_t dt + \\sigma_z \\cdot d W_t\n",
-    "\\end{align*}"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +44,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Table 3, Initial Values\n",
     "K0 = 695.65\n",
     "y0 = .540"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute consumption numbers, lower triangular covariance matrix\n",
+    "ξ_b = 5.\n",
+    "\n",
+    "δ = .01\n",
+    "η = .032\n",
+    "\n",
+    "αc_0 = .00484 * 4\n",
+    "αc_1 = .01 * 4\n",
+    "σc = np.array([.00477, 0.]) * 2\n",
+    "αz_1 = .014 * 4\n",
+    "σz = np.array([.011, .025]) * 2\n",
+    "\n",
+    "vc = (1-η)/δ\n",
+    "vz = αc_1*vc/(δ+αz_1)\n",
+    "h = -(vz*σz+vc*σc)/ξ_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00954, 0.     ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "σc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.022, 0.05 ])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "σz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.44282773, -0.58666667])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute consumption numbers, upper triangular covariance matrix\n",
+    "\n",
+    "# Refactor covariance matrix\n",
+    "σc = np.array([.00477, 0.]) * 2\n",
+    "σz = np.array([.011, .025]) * 2\n",
+    "var_c = np.dot(σc, σc)\n",
+    "var_z = np.dot(σz, σz)\n",
+    "cov_cz = np.dot(σc, σz)\n",
+    "\n",
+    "σz = np.array([0., np.sqrt(var_z)])\n",
+    "σc_2 = cov_cz / σz[1]\n",
+    "σc_1 = np.sqrt(var_c-σc_2**2)\n",
+    "σc = np.array([σc_1, σc_2])\n",
+    "\n",
+    "ξ_b = 5.\n",
+    "\n",
+    "δ = .01\n",
+    "η = .032\n",
+    "\n",
+    "αc_0 = .00484 * 4\n",
+    "αc_1 = .01 * 4\n",
+    "αz_1 = .014 * 4\n",
+    "\n",
+    "vc = (1-η)/δ\n",
+    "vz = αc_1*vc/(δ+αz_1)\n",
+    "h = -(vz*σz+vc*σc)/ξ_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.16905356, -0.71532865])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00873211, 0.00384213])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "σc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.      , 0.054626])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "σz"
    ]
   }
  ],
