--- a/notebook/paper_plots.ipynb
+++ b/notebook/paper_plots.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage_setting={'γ_2p': np.array([0, .0197*2, .3853*2]),\n",
+    "damage_setting={'γ_2p': np.array([0, .0197*2*2, .3853*2]),\n",
     "                'πd_o': np.array([1./3, 1./3, 1./3])}\n",
     "\n",
     "def simulate_emission(ξ_b, ξ_p, ξ_a, damage_setting, Kt, baseline):\n",
