added paper plots

--- a/notebook/ode_damage_smooth_ambiguity_constant_emission.ipynb
+++ b/notebook/ode_damage_smooth_ambiguity_constant_emission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converged. Total iteration 1610: LHS Error: 9.954781887699937e-09; RHS Error 0.0018524755055898817\n"
+      "Converged. Total iteration 1489: LHS Error: 9.922130672634921e-09; RHS Error 0.0004074733597089694\n"
      ]
     }
    ],
@@ -48,11 +48,13 @@
     "y_bar = 2.\n",
     "γ_1 = 1.7675/10000\n",
     "γ_2 = .0022*2\n",
-    "γ_2p = np.array([0, .0197*2, .3853*2])\n",
+    "# γ_2p = np.array([0, .0197*2, .3853*2])\n",
+    "γ_2p = np.array([0, .0197*2])\n",
     "# γ_2p = np.array([0, .0197*2*2, .3853*2])\n",
     "\n",
     "y_step = .02\n",
-    "y_grid = np.arange(0., 4., y_step)\n",
+    "# y_grid = np.arange(0., 2.+y_step, y_step)\n",
+    "y_grid = np.arange(0., 4.+y_step, y_step)\n",
     "\n",
     "n_damage = len(γ_2p)\n",
     "n_temp = 16\n",
@@ -76,24 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_res['e_tilde'] = np.ones_like(model_res['e_tilde'])*10\n",
+    "# model_res['e_tilde'] = np.ones_like(model_res['e_tilde'])*10\n",
+    "# model_res['e_tilde'] = np.load('e_star.npy')\n",
     "np.save('emission_damage_ambiguity', model_res['e_tilde'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converged. Total iteration 5000: LHS Error: 0.006213823665689233; RHS Error 0.06177266500507439\n"
+      "Converged. Total iteration 1443: LHS Error: 9.961921954015907e-09; RHS Error 0.00029365657173054116\n",
+      "Converged. Total iteration 1477: LHS Error: 9.960514191220682e-09; RHS Error 0.0003540801534158561\n",
+      "Converged. Total iteration 1449: LHS Error: 9.914193022098061e-09; RHS Error 0.0003148543110500293\n",
+      "Converged. Total iteration 1445: LHS Error: 9.960102298478546e-09; RHS Error 0.0003016117209525965\n",
+      "Converged. Total iteration 1486: LHS Error: 9.966176550690875e-09; RHS Error 0.0003892692380071186\n",
+      "Converged. Total iteration 1481: LHS Error: 9.909224107929049e-09; RHS Error 0.00036723740427852675\n",
+      "Converged. Total iteration 1451: LHS Error: 9.910763765219599e-09; RHS Error 0.0003256667411466116\n",
+      "Converged. Total iteration 1490: LHS Error: 9.940414269493658e-09; RHS Error 0.0004074733607604894\n"
      ]
     }
    ],
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,6 +206,42 @@
     "np.save('ME_temp_carb_damage_ambiguity', model_temp_carb['ME'])\n",
     "np.save('ME_damage_ambiguity', model_total['ME'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.02, 0.04, 0.06, 0.08, 0.1 , 0.12, 0.14, 0.16, 0.18, 0.2 ,\n",
+       "       0.22, 0.24, 0.26, 0.28, 0.3 , 0.32, 0.34, 0.36, 0.38, 0.4 , 0.42,\n",
+       "       0.44, 0.46, 0.48, 0.5 , 0.52, 0.54, 0.56, 0.58, 0.6 , 0.62, 0.64,\n",
+       "       0.66, 0.68, 0.7 , 0.72, 0.74, 0.76, 0.78, 0.8 , 0.82, 0.84, 0.86,\n",
+       "       0.88, 0.9 , 0.92, 0.94, 0.96, 0.98, 1.  , 1.02, 1.04, 1.06, 1.08,\n",
+       "       1.1 , 1.12, 1.14, 1.16, 1.18, 1.2 , 1.22, 1.24, 1.26, 1.28, 1.3 ,\n",
+       "       1.32, 1.34, 1.36, 1.38, 1.4 , 1.42, 1.44, 1.46, 1.48, 1.5 , 1.52,\n",
+       "       1.54, 1.56, 1.58, 1.6 , 1.62, 1.64, 1.66, 1.68, 1.7 , 1.72, 1.74,\n",
+       "       1.76, 1.78, 1.8 , 1.82, 1.84, 1.86, 1.88, 1.9 , 1.92, 1.94, 1.96,\n",
+       "       1.98, 2.  , 2.02, 2.04, 2.06, 2.08, 2.1 , 2.12, 2.14, 2.16, 2.18,\n",
+       "       2.2 , 2.22, 2.24, 2.26, 2.28, 2.3 , 2.32, 2.34, 2.36, 2.38, 2.4 ,\n",
+       "       2.42, 2.44, 2.46, 2.48, 2.5 , 2.52, 2.54, 2.56, 2.58, 2.6 , 2.62,\n",
+       "       2.64, 2.66, 2.68, 2.7 , 2.72, 2.74, 2.76, 2.78, 2.8 , 2.82, 2.84,\n",
+       "       2.86, 2.88, 2.9 , 2.92, 2.94, 2.96, 2.98, 3.  , 3.02, 3.04, 3.06,\n",
+       "       3.08, 3.1 , 3.12, 3.14, 3.16, 3.18, 3.2 , 3.22, 3.24, 3.26, 3.28,\n",
+       "       3.3 , 3.32, 3.34, 3.36, 3.38, 3.4 , 3.42, 3.44, 3.46, 3.48, 3.5 ,\n",
+       "       3.52, 3.54, 3.56, 3.58, 3.6 , 3.62, 3.64, 3.66, 3.68, 3.7 , 3.72,\n",
+       "       3.74, 3.76, 3.78, 3.8 , 3.82, 3.84, 3.86, 3.88, 3.9 , 3.92, 3.94,\n",
+       "       3.96, 3.98, 4.  ])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
